--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ dist:
 #    - python: 3.7
 #      dist: xenial
 #      sudo: true
-install: pip install tox-travis coveralls pyserial-asyncio pytest-asyncio
+install: pip install tox-travis coveralls
 script:
   - tox
   - coverage run --source pyduofern -m py.test
