more settings for travis and tox, disable live tests by default

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,14 @@
 [tox]
 envlist=
-    py35
-    py36
     py37
 
 [testenv]
 deps =
     pytest
+    wheel
+    pytest-vcr
 
-commands = py.test {posargs}
+setenv = USE_NETWORK=false
+commands = pytest {posargs}
 
 [pytest]
