--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 sudo: false
 language: python
 python:
-  - "3.5"
   - "3.6"
   - "3.7"
+  - "3.8"
 dist:
   xenial
 #matrix:
@@ -11,10 +11,13 @@ dist:
 #    - python: 3.7
 #      dist: xenial
 #      sudo: true
-install: pip install tox-travis coveralls
+install: pip install tox-travis coveralls pytest-vcr
 script:
   - tox
-  - coverage run --source pyduofern -m py.test
+  - coverage run --source pyess -m py.test
   - coverage report -m
 after_success:
   - coveralls
+
+env:
+  USE_NETWORK=false
