--- a/pyess/tests/cassettes/test_offline_cli_get_data.yaml
+++ b/pyess/tests/cassettes/test_offline_cli_get_data.yaml
@@ -18,7 +18,7 @@ interactions:
     uri: https://192.168.1.253/v1/user/setting/login
   response:
     body:
-      string: "{\n    \"status\": \"success\",\n    \"auth_key\": \"de193e54-e941-11e9-a9b4-ba5511008000\"\
+      string: "{\n    \"status\": \"success\",\n    \"auth_key\": \"914c5f0a-e948-11e9-a9b6-ba5511008000\"\
         ,\n    \"regnum\": \"THE_ESS_NAME\",\n    \"role\": \"user\"\n}\n"
     headers:
       Access-Control-Allow-Origin:
@@ -28,7 +28,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 20:34:31 GMT
+      - Mon, 07 Oct 2019 21:22:29 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -37,8 +37,8 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000", "by": "phone", "date_time":
-      "2019-10-07 22:34:32"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000", "by": "phone", "date_time":
+      "2019-10-07 23:22:30"}'
     headers:
       Accept:
       - '*/*'
@@ -65,7 +65,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:32 GMT
+      - Mon, 07 Oct 2019 23:22:31 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -74,7 +74,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000"}'
     headers:
       Accept:
       - '*/*'
@@ -103,7 +103,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:32 GMT
+      - Mon, 07 Oct 2019 23:22:31 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -112,7 +112,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000"}'
     headers:
       Accept:
       - '*/*'
@@ -147,7 +147,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:32 GMT
+      - Mon, 07 Oct 2019 23:22:31 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -156,7 +156,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000"}'
     headers:
       Accept:
       - '*/*'
@@ -185,7 +185,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:33 GMT
+      - Mon, 07 Oct 2019 23:22:31 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -194,7 +194,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000"}'
     headers:
       Accept:
       - '*/*'
@@ -213,15 +213,15 @@ interactions:
   response:
     body:
       string: "{\n    \"statistics\":\n    {\n        \"pcs_pv_total_power\": \"0\"\
-        ,\n        \"batconv_power\": \"209\",\n        \"bat_use\": \"1\",\n    \
-        \    \"bat_status\": \"2\",\n        \"bat_user_soc\": \"19.44444\",\n   \
-        \     \"load_power\": \"207\",\n        \"load_today\": \"0.0\",\n       \
-        \ \"grid_power\": \"2\",\n        \"current_day_self_consumption\": \"0.0\"\
+        ,\n        \"batconv_power\": \"166\",\n        \"bat_use\": \"1\",\n    \
+        \    \"bat_status\": \"2\",\n        \"bat_user_soc\": \"14.58333\",\n   \
+        \     \"load_power\": \"171\",\n        \"load_today\": \"0.0\",\n       \
+        \ \"grid_power\": \"5\",\n        \"current_day_self_consumption\": \"0.0\"\
         ,\n        \"current_pv_generation_sum\": \"0\",\n        \"current_grid_feed_in_energy\"\
         : \"0\"\n    },\n    \"direction\":\n    {\n        \"is_direct_consuming_\"\
         : \"0\",\n        \"is_battery_charging_\": \"0\",\n        \"is_battery_discharging_\"\
         : \"1\",\n        \"is_grid_selling_\": \"0\",\n        \"is_grid_buying_\"\
-        : \"0\",\n        \"is_charging_from_grid_\": \"0\"\n    },\n    \"operation\"\
+        : \"1\",\n        \"is_charging_from_grid_\": \"0\"\n    },\n    \"operation\"\
         :\n    {\n        \"status\": \"start\",\n        \"mode\": \"1\"\n    },\n\
         \    \"wintermode\":\n    {\n        \"winter_status\": \"on\"\n    },\n \
         \   \"pcs_fault\":\n    {\n        \"pcs_status\": \"pcs_ok\"\n    }\n}\n"
@@ -233,7 +233,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:33 GMT
+      - Mon, 07 Oct 2019 23:22:32 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
@@ -242,7 +242,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: '{"auth_key": "de193e54-e941-11e9-a9b4-ba5511008000"}'
+    body: '{"auth_key": "914c5f0a-e948-11e9-a9b6-ba5511008000"}'
     headers:
       Accept:
       - '*/*'
@@ -261,30 +261,31 @@ interactions:
   response:
     body:
       string: "{\n    \"PV\":\n    {\n        \"brand\": \"LGE-SOLAR\",\n        \"\
-        capacity\": \"5850\",\n        \"pv1_voltage\": \"26.100000\",\n        \"\
+        capacity\": \"5850\",\n        \"pv1_voltage\": \"26.299999\",\n        \"\
         pv2_voltage\": \"26.400000\",\n        \"pv1_power\": \"0\",\n        \"pv2_power\"\
         : \"0\",\n        \"pv1_current\": \"0.110000\",\n        \"pv2_current\"\
         : \"0.000000\",\n        \"today_pv_generation_sum\": \"0\",\n        \"today_month_pv_generation_sum\"\
         : \"71671\"\n    },\n    \"BATT\":\n    {\n        \"status\": \"2\",\n  \
-        \      \"soc\": \"19.4\",\n        \"dc_power\": \"209\",\n        \"winter_setting\"\
+        \      \"soc\": \"14.6\",\n        \"dc_power\": \"166\",\n        \"winter_setting\"\
         : \"on\",\n        \"winter_status\": \"on\",\n        \"safty_soc\": \"20\"\
         ,\n        \"today_batt_discharge_enery\": \"0\",\n        \"today_batt_charge_energy\"\
         : \"0\",\n        \"month_batt_charge_energy\": \"31947\",\n        \"month_batt_discharge_energy\"\
-        : \"29469\"\n    },\n    \"GRID\":\n    {\n        \"active_power\": \"-2.620000\"\
-        ,\n        \"a_phase\": \"234.699997\",\n        \"freq\": \"50.000000\",\n\
+        : \"30765\"\n    },\n    \"GRID\":\n    {\n        \"active_power\": \"5.270000\"\
+        ,\n        \"a_phase\": \"235.399994\",\n        \"freq\": \"50.009998\",\n\
         \        \"today_grid_feed_in_energy\": \"0\",\n        \"today_grid_power_purchase_energy\"\
         : \"0\",\n        \"month_grid_feed_in_energy\": \"8961\",\n        \"month_grid_power_purchase_energy\"\
-        : \"38955\"\n    },\n    \"LOAD\":\n    {\n        \"load_power\": \"207\"\
+        : \"38955\"\n    },\n    \"LOAD\":\n    {\n        \"load_power\": \"171\"\
         ,\n        \"today_load_consumption_sum\": \"0\",\n        \"today_pv_direct_consumption_enegy\"\
         : \"0\",\n        \"today_batt_discharge_enery\": \"0\",\n        \"today_grid_power_purchase_energy\"\
-        : \"0\",\n        \"month_load_consumption_sum\": \"99309\",\n        \"month_pv_direct_consumption_energy\"\
-        : \"30885\",\n        \"month_batt_discharge_energy\": \"29469\",\n      \
-        \  \"month_grid_power_purchase_energy\": \"38955\"\n    },\n    \"PCS\":\n\
-        \    {\n        \"today_self_consumption\": \"0.0\",\n        \"month_co2_reduction_accum\"\
-        : \"50886\",\n        \"today_pv_generation_sum\": \"0\",\n        \"month_pv_generation_sum\"\
-        : \"71671\",\n        \"today_grid_feed_in_energy\": \"0\",\n        \"month_grid_feed_in_energy\"\
-        : \"8961\",\n        \"pcs_stauts\": \"3\",\n        \"feed_in_limitation\"\
-        : \"70\",\n        \"operation_mode\": \"0\"\n    }\n}\n"
+        : \"0\",\n        \"month_load_consumption_sum\": \"100605\",\n        \"\
+        month_pv_direct_consumption_energy\": \"30885\",\n        \"month_batt_discharge_energy\"\
+        : \"30765\",\n        \"month_grid_power_purchase_energy\": \"38955\"\n  \
+        \  },\n    \"PCS\":\n    {\n        \"today_self_consumption\": \"0.0\",\n\
+        \        \"month_co2_reduction_accum\": \"50886\",\n        \"today_pv_generation_sum\"\
+        : \"0\",\n        \"month_pv_generation_sum\": \"71671\",\n        \"today_grid_feed_in_energy\"\
+        : \"0\",\n        \"month_grid_feed_in_energy\": \"8961\",\n        \"pcs_stauts\"\
+        : \"3\",\n        \"feed_in_limitation\": \"70\",\n        \"operation_mode\"\
+        : \"0\"\n    }\n}\n"
     headers:
       Access-Control-Allow-Origin:
       - '*'
@@ -293,7 +294,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Mon, 07 Oct 2019 22:34:33 GMT
+      - Mon, 07 Oct 2019 23:22:32 GMT
       Server:
       - nginx/1.10.3
       Transfer-Encoding:
