--- a/.coveragerc
+++ b/.coveragerc
@@ -3,3 +3,4 @@ omit =
     # omit coverage on all "online" tests that have to be run against the actual device
     pyess/tests/anonymize_cassettes.py
     pyess/tests/ess_live_test.py
+    pyess/tests/cli_live_test.py
