--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,11 @@
 sudo: false
 language: python
 python:
-  - "3.6"
   - "3.7"
-  - "3.8-dev"
+  - "3.8"
 dist:
-  xenial
-#matrix:
-#  include:
-#    - python: 3.7
-#      dist: xenial
-#      sudo: true
+  bionic
+
 install:
   - pip install tox-travis coveralls pytest-vcr pytest-mock pytest-asyncio hbmqtt
   - python setup.py develop
